# hyperql

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HyperQL_0-16_Pt2.json  HyperQL_0-16_Pt3.json  HyperQL_0-16_Pt4.json  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  binding.gyp  build.zig.zon  deny.toml  extension.toml  grammar.js  new.hql  package-lock.json  package.json  pom.xml  pyproject.toml  setup.ps1  setup.sh  test.hql  tree-sitter.json  uninstall.ps1  uninstall.sh
.github/workflows/: license-check.yml
Example_HQL_Files/: GeminiDM.hql
bindings/c/: tree-sitter-hyperql.pc.in
bindings/java/test/: TreeSitterHyperqlTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: lib.rs
bindings/zig/: root.zig  test.zig
hyperql-language-specification/: HyperQL_0-16_Pt1.json  HyperQL_0-16_Pt5.json  HyperQL_0-16_Pt6.json  HyperQL_0-16_Pt7.json
hyperql-language-specification/Example_HQL_Files/: ClaudeDM.hql  MarriageConstraints.hql
hyperql-lsp/: build.zig  build.zig.zon
hyperql-lsp/src/: main.zig
hyperql-zed/: .gitignore  Cargo.toml  extension.toml
hyperql-zed/grammars/: hyperql.wasm
hyperql-zed/src/: lib.rs
languages/hyperql/: outline.scm
queries/: highlights.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: queries.txt  schema.txt
tree-sitter-hyperql/: .gitignore  CMakeLists.txt  build.zig  go.mod  new.hql  package.json  setup.py  test.hql  test_field.hql
tree-sitter-hyperql/queries/: indents.scm
tree-sitter-hyperql/src/: parser.c
zed-extension/: extension.toml
zed-extension/grammars/: hyperql.wasm
(+18 files in other folders)
