[package]
name = "tree-sitter-hyperql"
description = "HyperQL grammar for tree-sitter"
version = "0.14.0"
authors = ["jarbear82 <jarbear82@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hyperql"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jarbear82/hyperql"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
